<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_details_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/border"
    android:elevation="4dp"
    android:padding="8dp">

    <TextView
        android:id="@+id/contact_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/last_name_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/phone_number_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_name_view" />

    <TextView
        android:id="@+id/phone_number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_view" />

    <EditText
        android:id="@+id/contact_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/edit_textview_style"
        android:inputType="textPersonName"
        android:transitionName="name"
        app:layout_constraintStart_toEndOf="@id/phone_number_view"
        app:layout_constraintTop_toTopOf="@id/contact_name_view"
        app:layout_constraintBottom_toBottomOf="@id/contact_name_view"
        tools:text="Ormond" />

    <EditText
        android:id="@+id/last_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/edit_textview_style"
        android:inputType="textPersonName"
        android:transitionName="lastName"
        app:layout_constraintBottom_toBottomOf="@+id/last_name_view"
        app:layout_constraintStart_toEndOf="@id/phone_number_view"
        app:layout_constraintTop_toTopOf="@+id/last_name_view"
        tools:text="Brody" />

    <EditText
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/edit_textview_style"
        android:inputType="phone"
        android:transitionName="phoneNumber"
        app:layout_constraintBottom_toBottomOf="@+id/phone_number_view"
        app:layout_constraintStart_toEndOf="@id/phone_number_view"
        app:layout_constraintTop_toTopOf="@+id/phone_number_view"
        tools:text="01434-172552" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/save_button"
        app:layout_constraintStart_toEndOf="@id/edit_button"
        app:layout_constraintTop_toBottomOf="@id/phone_number_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
