<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:padding="8dp"
    android:background="@drawable/border"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/contact_image_view"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/contact_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/contact_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/contact_image_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contact_lastName_view"/>

    <TextView
        android:id="@+id/contact_lastName_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/contact_name_view"
        app:layout_constraintStart_toEndOf="@id/contact_image_view"
        app:layout_constraintBottom_toTopOf="@id/contact_phoneNumber_view"/>

    <TextView
        android:id="@+id/contact_phoneNumber_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/contact_lastName_view"
        app:layout_constraintStart_toEndOf="@id/contact_image_view"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/contact_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textview_style"
        tools:text="Xaviera"
        android:transitionName="name"
        app:layout_constraintStart_toEndOf="@id/contact_phoneNumber_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contact_lastName_text"/>

    <TextView
        android:id="@+id/contact_lastName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textview_style"
        tools:text="Cleveland"
        android:transitionName="lastName"
        app:layout_constraintStart_toEndOf="@id/contact_phoneNumber_view"
        app:layout_constraintTop_toBottomOf="@id/contact_name_text"
        app:layout_constraintBottom_toTopOf="@id/contact_phoneNumber_text"/>

    <TextView
        android:id="@+id/contact_phoneNumber_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textview_style"
        tools:text="01917-133441"
        android:transitionName="phoneNumber"
        app:layout_constraintStart_toEndOf="@id/contact_phoneNumber_view"
        app:layout_constraintTop_toBottomOf="@id/contact_lastName_text"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>